fix(comments): Clean up overlapping style after nesting.

--- a/src/main/app/comments/comments.scss
+++ b/src/main/app/comments/comments.scss
@@ -13,9 +13,8 @@ div.treeview {
 
     ul {
         background: url("../images/commentsul.gif") repeat-y 2px bottom;
-        margin-left: 5px;
+        margin: 0 0 0 5px;
         list-style-type: none;
-        margin: 0;
         padding: 0;
         position: static;
 
